--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,10 @@ h2{
 p.ui {
     font-size: 20px;
 }
+.uitext {
+    padding-left: 30px;
+    padding-right: 30px;
+}
 .palette {
     background-color: #e9e8e8;
     padding-top: 15px;
@@ -28,8 +32,7 @@ p.ui {
     width: 120px;
     height: 120px;
     margin: 30px 15px;
-    display: inline-block;
-    
+    display: inline-block; 
 }
 .color p {
     color:aliceblue;
